Add-basic-layout

--- a/index.html
+++ b/index.html
@@ -7,8 +7,24 @@
     <title>Library</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
+    <link rel="icon" type="image/x-icon" href="images/favico.png">
 </head>
 <body>
-    
+    <div class="header">
+        <h1>LIBRARY</h1>
+        <input class="btn logIn" type="button" value="LOG IN">
+    </div>
+    <div class="main">
+        <div class="controls">
+            <input class="btn addBook" type="button" value="Add book">
+        </div>
+        <div class="booksContainer">
+
+        </div>
+    </div>
+    <div class="footer">
+        Copyright &copy; 2021 Vasilii Perfilev 
+        <a href="https://github.com/vasiliiperfilev"><img src="images/GitHub-Mark-64px.png" alt="GitHub logo"></a>
+    </div>
 </body>
 </html>
