--- a/index.html
+++ b/index.html
@@ -26,5 +26,15 @@
         Copyright &copy; 2021 Vasilii Perfilev 
         <a href="https://github.com/vasiliiperfilev"><img src="images/GitHub-Mark-64px.png" alt="GitHub logo"></a>
     </div>
+    <div class="overlay">
+        <form class="bookForm">
+            <h3>Add a new book</h3>
+            <input class="textInput" type="text" placeholder="Title" required>
+            <input class="textInput" type="text" placeholder="Author" required>
+            <input class="textInput" type="text" placeholder="Pages" required>
+            <label>Have you read it? <input class="isFinishedInput" type="checkbox"></label>
+            <input class="btn submit" type="submit" value="Submit">
+        </form>
+    </div>
 </body>
 </html>
