Add book create event

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <div class="overlay">
         <form class="bookForm">
             <h3>Add a new book</h3>
-            <input class="textInput" type="text" placeholder="Title" required>
-            <input class="textInput" type="text" placeholder="Author" required>
-            <input class="textInput" type="text" placeholder="Pages" required>
-            <label>Have you read it? <input class="isFinishedInput" type="checkbox"></label>
+            <input class="textInput bookParam" type="text" placeholder="Title" required>
+            <input class="textInput bookParam" type="text" placeholder="Author" required>
+            <input class="textInput bookParam" type="text" placeholder="Pages" required>
+            <label>Have you read it? <input class="isFinishedInput bookParam" type="checkbox"></label>
             <input class="btn submit" type="submit" value="Submit">
         </form>
     </div>
