Add book card template

--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
             <input class="btn addBook" type="button" value="Add book">
         </div>
         <div class="booksContainer">
-
+            <div class="book">
+                <p class="title">Dummy text</p>
+                <p class="author">Dummy text</p>
+                <p class="pages">Dummy text</p>
+                <input class="btn readBook"type="button" value="Read">
+                <input class="btn removeBook" type="button" value="Remove">
+            </div>
         </div>
     </div>
     <div class="footer">
