Minor code refactoring

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h3>Add a new book</h3>
             <input class="textInput bookParam" type="text" placeholder="Title" required>
             <input class="textInput bookParam" type="text" placeholder="Author" required>
-            <input class="textInput bookParam" type="text" placeholder="Pages" required>
+            <input class="textInput bookParam" type="number" placeholder="Pages" required>
             <label>Have you read it? <input class="isFinishedInput bookParam" type="checkbox"></label>
             <input class="btn submit" type="submit" value="Submit">
         </form>
